--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
+    "prettify": "find . -name '*.js' ! -path './node_modules/*' ! -path './public/build/*' -exec prettier --write {} ';'",
+    "prettify-ts": "find . -name '*.ts' ! -path './node_modules/*' ! -path './public/build/*' -exec prettier --write {} ';'",
+    "standardize": "find . -name '*.js' ! -path './node_modules/*' ! -path './public/build/*' -exec standard --fix {} ';'",
+    "standardize-ts": "find . -name '*.ts' ! -path './node_modules/*' ! -path './public/build/*' -exec ts-standard --fix {} ';'",
     "start": "sirv public",
     "validate": "svelte-check"
   },
@@ -12,13 +16,16 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
     "@tsconfig/svelte": "^1.0.0",
+    "prettier": "^2.1.2",
     "rollup": "^2.33.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "standard": "^16.0.1",
     "svelte": "^3.29.4",
     "svelte-check": "^1.1.8",
     "svelte-preprocess": "^4.5.2",
+    "ts-standard": "^9.0.0",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   },
