--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "validate": "svelte-check"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.0",
     "sirv-cli": "^1.0.8",
     "uuid": "^8.3.1"
   },
@@ -23,10 +22,12 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
     "@tsconfig/svelte": "^1.0.0",
+    "@types/uuid": "^8.3.0",
     "prettier": "^2.2.0",
     "rollup": "^2.33.3",
+    "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.1.1",
+    "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "standard": "^16.0.3",
     "svelte": "^3.30.0",
