--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "prettify": "fd -e js -x prettier --write {}",
-    "prettify-ts": "fd -e ts -x prettier --write {}",
-    "standardize": "fd -e js -x standard --fix {}",
-    "standardize-ts": "fd -e ts -x ts-standard --fix {}",
+    "prettify": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "standardize": "ts-standard --fix",
     "start": "sirv public",
     "validate": "svelte-check"
   },
@@ -24,18 +22,23 @@
     "@rollup/plugin-typescript": "^8.2.5",
     "@tsconfig/svelte": "^2.0.1",
     "@types/uuid": "^8.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
     "prettier": "^2.3.2",
     "rollup": "^2.56.3",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "standard": "^16.0.3",
     "svelte": "^3.42.4",
     "svelte-check": "^2.2.5",
     "svelte-preprocess": "^4.9.2",
     "ts-standard": "^10.0.0",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
+  },
+  "ts-standard": {
+    "ignore": [
+      "*.d.ts"
+    ]
   }
 }
