--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c",
+    "check": "svelte-check",
     "dev": "rollup -c -w",
-    "prettify": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "standardize": "ts-standard --fix",
-    "start": "sirv public",
-    "validate": "svelte-check"
+    "format": "prettier --write --plugin-search-dir=. .",
+    "lint": "eslint --fix --ignore-path .prettierignore .",
+    "start": "sirv public"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -23,22 +22,18 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "eslint": "^8.12.0",
     "prettier": "^2.6.2",
     "rollup": "^2.70.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sirv-cli": "^2.0.2",
     "svelte": "^3.46.6",
     "svelte-check": "^2.4.6",
     "svelte-preprocess": "^4.10.5",
-    "ts-standard": "^11.0.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
-  },
-  "ts-standard": {
-    "ignore": [
-      "*.d.ts"
-    ]
   }
 }
