--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "eslint": "^8.12.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.13.0",
     "prettier": "^2.6.2",
     "rollup": "^2.70.1",
     "rollup-plugin-css-only": "^3.1.0",
@@ -30,8 +31,8 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sirv-cli": "^2.0.2",
-    "svelte": "^3.46.6",
-    "svelte-check": "^2.4.6",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.6.0",
     "svelte-preprocess": "^4.10.5",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
